chore(Vector2D): add __repr__ unmutable fn

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -76,8 +76,14 @@
     }
    ],
    "source": [
-    "p4.normalized()\n",
-    "print(p4.x, p4.y)"
+    "p4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "p4.normalized()"
    ]
   }
  ],
